install/0000_50_cluster-autoscaler-operator_00_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cluster-api
  labels:
    name: openshift-cluster-api
    openshift.io/run-level: "1"
