install/00_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-machine-api
  annotations:
    exclude.release.openshift.io/internal-openshift-hosted: "true"
  labels:
    name: openshift-machine-api
    openshift.io/run-level: "1"
    # allow openshift-monitoring to look for ServiceMonitor objects in this namespace
    openshift.io/cluster-monitoring: "true"
