install/07_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-autoscaler-operator
  namespace: openshift-machine-api
  labels:
    k8s-app: cluster-autoscaler-operator
  annotations:
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: MachineAPI
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: cluster-autoscaler-operator
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        kubectl.kubernetes.io/default-container: cluster-autoscaler-operator
        openshift.io/required-scc: restricted-v2
      labels:
        k8s-app: cluster-autoscaler-operator
    spec:
      priorityClassName: system-node-critical
      serviceAccountName: cluster-autoscaler-operator
      containers:
      - name: cluster-autoscaler-operator
        image: docker.io/openshift/origin-cluster-autoscaler-operator:v4.0
        command:
        - cluster-autoscaler-operator
        args:
        - -alsologtostderr
        ports:
        - containerPort: 9192
          name: metrics
          protocol: TCP
        - containerPort: 8443
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
        volumeMounts:
        - name: cert
          mountPath: /etc/cluster-autoscaler-operator/tls
          readOnly: true
        terminationMessagePolicy: FallbackToLogsOnError
      volumes:
      - name: cert
        secret:
          secretName: cluster-autoscaler-operator-cert
          items:
          - key: tls.crt
            path: tls.crt
          - key: tls.key
            path: tls.key
      nodeSelector:
        node-role.kubernetes.io/master: ""
      restartPolicy: Always
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
