install/04_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-autoscaler-operator
  namespace: openshift-machine-api
  labels:
    k8s-app: cluster-autoscaler-operator
  annotations:
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    service.beta.openshift.io/serving-cert-secret-name: cluster-autoscaler-operator-cert
    include.release.openshift.io/single-node-production-edge: "true"
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: metrics
    port: 9192
    targetPort: metrics
    protocol: TCP
  selector:
    k8s-app: cluster-autoscaler-operator
  sessionAffinity: None
